Fix padding on smaller screens where hover none doesn't work

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -56,7 +56,7 @@
     }
 }
 
-@media (hover: none) {
+@media (hover: none), (max-width: 720px) {
     .carousel{
         overflow: scroll;
     }
